src/styles/components/_audiolevel.scss
/*
 * Spreed WebRTC.
 * Copyright (C) 2013-2014 struktur AG
 *
 * This file is part of Spreed WebRTC.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 */

#audiolevel {
  left: 0;
  margin: 0 auto;
  position: fixed;
  right: 0;
  top: $audiolevel-top;
  width: 400px;
  z-index: 6;
  .audio-level {
    background: $audiovideolevel; /* Old browsers */
    background: gradient(linear, left top, left bottom, color-stop(0%,$audiovideolevel), color-stop(50%,#a1d54f), color-stop(51%,#80c217), color-stop(100%,#7cbc0a)); /* Chrome,Safari4+ */
    background: linear-gradient(to bottom, $audiovideolevel 0%,#a1d54f 50%,#80c217 51%,#7cbc0a 100%); /* W3C */
    border-radius: 0 0 2px 2px;
    height: 4px;
    left: 0;
    margin: 0 auto;
    position: absolute;
    right: 0;
    transition: width .05s ease-in-out;
    width: 0;
  }
}

